--- a/catalog.html
+++ b/catalog.html
@@ -12,40 +12,45 @@
   <header>
     <div class="header-top">
       <div class="container">
-        <a class="header-logo" href="index.html" title="На главную страницу">техномарт</a>
-        <input class="header-top-search" type="text" name="main-search" placeholder="Поиск:">
-        <a class="header-top-btn header-btn-bookmarks" href="#">Закладки: 0</a>
-        <a class="header-top-btn header-btn-cart" href="#">Корзина: 10</a>
-        <a class="header-top-btn header-btn-order" href="#">Оформить заказ</a>
+        <a class="header-logo" href="index.html" title="На главную страницу"><img src="img/logo-technomart.svg" alt="техномарт"></a>
+        <form class="header-top-search">
+          <button class="header-top-search-submit" type="submit"></button>
+          <input class="header-top-search-input" type="text" name="main-search" placeholder="Поиск:">
+        </form>
+        <a class="header-top-btn btn-bookmarks" href="#">Закладки: 0</a>
+        <a class="header-top-btn btn-cart btn-cart-filled" href="#">Корзина: 10</a>
+        <a class="header-top-btn btn-order" href="#">Оформить заказ</a>
       </div>
     </div>
     <div class="header-mid">
-      <p class="header-mid-title">Интернет-магазин строительных материалов и инструментов для ремонта</p>
-      <div class="header-contacts">
-        <a class="header-tel" href="tel:+78125550555" title="Позвонить нам">+7 (812) 555-05-55
-        </a>
-        <p class="header-adress">
-          г. Санкт-Петербург, ул. Б. Конюшенная, д. 19/8
-        </p>
+      <div class="container">
+        <div class="header-mid-inner">
+          <p class="header-mid-title">Интернет-магазин строительных материалов и инструментов для ремонта</p>
+          <div class="header-contacts">
+            <a class="header-tel" href="tel:+78125550555" title="Позвонить нам">+7 (812) 555-05-55
+            </a>
+            <p class="header-adress">
+              г. Санкт-Петербург, ул. Б. Конюшенная, д. 19/8
+            </p>
+          </div>
+          <ul class="user-menu">
+            <li class="user-menu-item"><a class="user-menu-btn user-menu-profile" href="#">Равшан Джамшутович</a><a class="user-logout" href="#" title="Выход"></a></li>
+            <li class="user-menu-item user-menu-orders"><a href="#">Мои заказы</a></li>
+            <li class="user-menu-item user-menu-control-panel"><a href="#">Личный кабинет</a></li>
+          </ul>
+        </div>
+        <nav class="main-nav">
+          <ul>
+            <li class="main-nav-item"><a href="#">Главная</a></li>
+            <li class="main-nav-item"><a href="catalog.html">Каталог</a></li>
+            <li class="main-nav-item"><a href="#">Компания</a></li>
+            <li class="main-nav-item"><a href="#">Новости</a></li>
+            <li class="main-nav-item"><a href="#">Спецпредложения</a></li>
+            <li class="main-nav-item"><a href="#">Доставка</a></li>
+            <li class="main-nav-item"><a href="#">Контакты</a></li>
+          </ul>
+        </nav>
       </div>
-      <ul class="user-menu">
-        <li class="user-menu-item"><a class="user-menu-btn user-menu-profile" href="#">Равшан Джамшутович</a><a class="user-logout" href="#" title="Выход"></a></li>
-        <li class="user-menu-item user-menu-orders"><a href="#">Мои заказы</a></li>
-        <li class="user-menu-item user-menu-control-panel"><a href="#">Личный кабинет</a></li>
-      </ul>
-    </div>
-    <div class="header-bot">
-      <nav class="main-nav">
-        <ul>
-          <li class="main-nav-item"><a href="index.html">Главная</a></li>
-          <li class="main-nav-item"><a href="#">Каталог</a></li>
-          <li class="main-nav-item"><a href="#">Компания</a></li>
-          <li class="main-nav-item"><a href="#">Новости</a></li>
-          <li class="main-nav-item"><a href="#">Спецпредложения</a></li>
-          <li class="main-nav-item"><a href="#">Доставка</a></li>
-          <li class="main-nav-item"><a href="#">Контакты</a></li>
-        </ul>
-      </nav>
     </div>
   </header>
   <main>
@@ -58,9 +63,9 @@
       </ul>
     </div>
     <section class="container catalog">
-      <h2 class="catalog-name">перфораторы</h2>
+      <h2 class="container catalog-name">перфораторы</h2>
       <div class="catalog-filter">
-        <form action="https://echo.htmlacademy.ru">
+        <form class="catalog-filter-form" action="https://echo.htmlacademy.ru">
           <strong class="catalog-filter-title">фильтр:</strong>
           <fieldset class="catalog-filter-price">
             <legend>цена:</legend>
@@ -76,111 +81,119 @@
           </fieldset>
           <fieldset class="catalog-filter-power">
             <legend>питание:</legend>
-            <input type="radio" name="radio-accumulators" id="radio-accumulators" checked><label for="radio-accumulators">аккумуляторные</label>
-            <input type="radio" name="radio-wired" id="radio-wired"><label for="radio-wired">сетевые</label>
+            <input type="radio" name="radio-power" id="radio-accumulators" checked><label for="radio-accumulators">аккумуляторные</label>
+            <input type="radio" name="radio-power" id="radio-wired"><label for="radio-wired">сетевые</label>
           </fieldset>
           <input class="catalog-filter-submit" type="submit" name="submit" id="submit" value="показать">
         </form>
       </div>
-      <div class="catalog-sort"></div>
-      <ul class="catalog-goods">
-        <li class="catalog-item">
-          <img src="img/perforator_1_218x170.jpg" width="218" height="170" alt="BOSCH BFG 3000" class="catalog-item-img">
-          <h3 class="catalog-item-title">Перфоратор BOSCH BFG 3000</h3>
-          <span class="goods-old-price">22500 р.</span>
-          <a class="catalog-item-price primary-btn" href="#">15500 р.</a>
-          <div class="catalog-item-popup">
-            <a class="catalog-item-popup-buy" href="#">купить</a>
-            <a class="catalog-item-popup-bookmarks" href="#">в закладки</a>
-          </div>
-        </li>
-        <li class="catalog-item">
-          <img src="img/perforator_2_218x170.jpg" width="218" height="170" alt="BOSCH BFG 6000" class="catalog-item-img">
-          <h3 class="catalog-item-title">Перфоратор BOSCH BFG 6000</h3>
-          <span class="goods-old-price">30500 р.</span>
-          <a class="catalog-item-price primary-btn" href="#">25500 р.</a>
-          <div class="catalog-item-popup">
-            <a class="catalog-item-popup-buy" href="#">купить</a>
-            <a class="catalog-item-popup-bookmarks" href="#">в закладки</a>
-          </div>
-        </li>
-        <li class="catalog-item">
-          <img src="img/perforator_1_218x170.jpg" width="218" height="170" alt="BOSCH BFG 2000" class="catalog-item-img">
-          <h3 class="catalog-item-title">Перфоратор BOSCH BFG 2000</h3>
-          <span class="goods-old-price"></span>
-          <a class="catalog-item-price primary-btn" href="#">12500 р.</a>
-          <div class="catalog-item-popup">
-            <a class="catalog-item-popup-buy" href="#">купить</a>
-            <a class="catalog-item-popup-bookmarks" href="#">в закладки</a>
-          </div>
-        </li>
-        <li class="catalog-item">
-          <img src="img/perforator_2_218x170.jpg" width="218" height="170" alt="BOSCH BFG 3000" class="catalog-item-img">
-          <h3 class="catalog-item-title">Перфоратор BOSCH BFG 3000</h3>
-          <span class="goods-old-price">22500 р.</span>
-          <a class="catalog-item-price primary-btn" href="#">15500 р.</a>
-          <div class="catalog-item-popup">
-            <a class="catalog-item-popup-buy" href="#">купить</a>
-            <a class="catalog-item-popup-bookmarks" href="#">в закладки</a>
-          </div>
-        </li>
-        <li class="catalog-item">
-          <img src="img/perforator_1_218x170.jpg" width="218" height="170" alt="BOSCH BFG 6000" class="catalog-item-img">
-          <h3 class="catalog-item-title">Перфоратор BOSCH BFG 6000</h3>
-          <span class="goods-old-price">30500 р.</span>
-          <a class="catalog-item-price primary-btn" href="#">25500 р.</a>
-          <div class="catalog-item-popup">
-            <a class="catalog-item-popup-buy" href="#">купить</a>
-            <a class="catalog-item-popup-bookmarks" href="#">в закладки</a>
-          </div>
-        </li>
-        <li class="catalog-item">
-          <img src="img/perforator_2_218x170.jpg" width="218" height="170" alt="BOSCH BFG 2000" class="catalog-item-img">
-          <h3 class="catalog-item-title">Перфоратор BOSCH BFG 2000</h3>
-          <span class="goods-old-price"></span>
-          <a class="catalog-item-price primary-btn" href="#">12500 р.</a>
-          <div class="catalog-item-popup">
-            <a class="catalog-item-popup-buy" href="#">купить</a>
-            <a class="catalog-item-popup-bookmarks" href="#">в закладки</a>
-          </div>
-        </li>
-        <li class="catalog-item">
-          <img src="img/perforator_1_218x170.jpg" width="218" height="170" alt="BOSCH BFG 3000" class="catalog-item-img">
-          <h3 class="catalog-item-title">Перфоратор BOSCH BFG 3000</h3>
-          <span class="goods-old-price">22500 р.</span>
-          <a class="catalog-item-price primary-btn" href="#">15500 р.</a>
-          <div class="catalog-item-popup">
-            <a class="catalog-item-popup-buy" href="#">купить</a>
-            <a class="catalog-item-popup-bookmarks" href="#">в закладки</a>
-          </div>
-        </li>
-        <li class="catalog-item">
-          <img src="img/perforator_2_218x170.jpg" width="218" height="170" alt="BOSCH BFG 6000" class="catalog-item-img">
-          <h3 class="catalog-item-title">Перфоратор BOSCH BFG 6000</h3>
-          <span class="goods-old-price">30500 р.</span>
-          <a class="catalog-item-price primary-btn" href="#">25500 р.</a>
-          <div class="catalog-item-popup">
-            <a class="catalog-item-popup-buy" href="#">купить</a>
-            <a class="catalog-item-popup-bookmarks" href="#">в закладки</a>
-          </div>
-        </li>
-        <li class="catalog-item">
-          <img src="img/perforator_1_218x170.jpg" width="218" height="170" alt="BOSCH BFG 2000" class="catalog-item-img">
-          <h3 class="catalog-item-title">Перфоратор BOSCH BFG 2000</h3>
-          <span class="goods-old-price"></span>
-          <a class="catalog-item-price primary-btn" href="#">12500 р.</a>
-          <div class="catalog-item-popup">
-            <a class="catalog-item-popup-buy" href="#">купить</a>
-            <a class="catalog-item-popup-bookmarks" href="#">в закладки</a>
-          </div>
-        </li>
-      </ul>
+      <div class="catalog-goods">
+        <div class="catalog-sort">123123</div>
+        <ul class="catalog-list">
+          <li class="catalog-item">
+            <img src="img/perforator_1_218x170.jpg" width="218" height="170" alt="BOSCH BFG 3000" class="catalog-item-img">
+            <h3 class="catalog-item-title">Перфоратор BOSCH BFG 3000</h3>
+            <span class="goods-old-price">22500 р.</span>
+            <a class="catalog-item-price primary-btn" href="#">15500 р.</a>
+            <div class="catalog-item-popup">
+              <a class="catalog-item-popup-buy" href="#">купить</a>
+              <a class="catalog-item-popup-bookmarks" href="#">в закладки</a>
+            </div>
+          </li>
+          <li class="catalog-item">
+            <img src="img/perforator_2_218x170.jpg" width="218" height="170" alt="BOSCH BFG 6000" class="catalog-item-img">
+            <h3 class="catalog-item-title">Перфоратор BOSCH BFG 6000</h3>
+            <span class="goods-old-price">30500 р.</span>
+            <a class="catalog-item-price primary-btn" href="#">25500 р.</a>
+            <div class="catalog-item-popup">
+              <a class="catalog-item-popup-buy" href="#">купить</a>
+              <a class="catalog-item-popup-bookmarks" href="#">в закладки</a>
+            </div>
+          </li>
+          <li class="catalog-item">
+            <img src="img/perforator_1_218x170.jpg" width="218" height="170" alt="BOSCH BFG 2000" class="catalog-item-img">
+            <h3 class="catalog-item-title">Перфоратор BOSCH BFG 2000</h3>
+            <span class="goods-old-price"></span>
+            <a class="catalog-item-price primary-btn" href="#">12500 р.</a>
+            <div class="catalog-item-popup">
+              <a class="catalog-item-popup-buy" href="#">купить</a>
+              <a class="catalog-item-popup-bookmarks" href="#">в закладки</a>
+            </div>
+          </li>
+          <li class="catalog-item">
+            <img src="img/perforator_2_218x170.jpg" width="218" height="170" alt="BOSCH BFG 3000" class="catalog-item-img">
+            <h3 class="catalog-item-title">Перфоратор BOSCH BFG 3000</h3>
+            <span class="goods-old-price">22500 р.</span>
+            <a class="catalog-item-price primary-btn" href="#">15500 р.</a>
+            <div class="catalog-item-popup">
+              <a class="catalog-item-popup-buy" href="#">купить</a>
+              <a class="catalog-item-popup-bookmarks" href="#">в закладки</a>
+            </div>
+          </li>
+          <li class="catalog-item">
+            <img src="img/perforator_1_218x170.jpg" width="218" height="170" alt="BOSCH BFG 6000" class="catalog-item-img">
+            <h3 class="catalog-item-title">Перфоратор BOSCH BFG 6000</h3>
+            <span class="goods-old-price">30500 р.</span>
+            <a class="catalog-item-price primary-btn" href="#">25500 р.</a>
+            <div class="catalog-item-popup">
+              <a class="catalog-item-popup-buy" href="#">купить</a>
+              <a class="catalog-item-popup-bookmarks" href="#">в закладки</a>
+            </div>
+          </li>
+          <li class="catalog-item">
+            <img src="img/perforator_2_218x170.jpg" width="218" height="170" alt="BOSCH BFG 2000" class="catalog-item-img">
+            <h3 class="catalog-item-title">Перфоратор BOSCH BFG 2000</h3>
+            <span class="goods-old-price"></span>
+            <a class="catalog-item-price primary-btn" href="#">12500 р.</a>
+            <div class="catalog-item-popup">
+              <a class="catalog-item-popup-buy" href="#">купить</a>
+              <a class="catalog-item-popup-bookmarks" href="#">в закладки</a>
+            </div>
+          </li>
+          <li class="catalog-item">
+            <img src="img/perforator_1_218x170.jpg" width="218" height="170" alt="BOSCH BFG 3000" class="catalog-item-img">
+            <h3 class="catalog-item-title">Перфоратор BOSCH BFG 3000</h3>
+            <span class="goods-old-price">22500 р.</span>
+            <a class="catalog-item-price primary-btn" href="#">15500 р.</a>
+            <div class="catalog-item-popup">
+              <a class="catalog-item-popup-buy" href="#">купить</a>
+              <a class="catalog-item-popup-bookmarks" href="#">в закладки</a>
+            </div>
+          </li>
+          <li class="catalog-item">
+            <img src="img/perforator_2_218x170.jpg" width="218" height="170" alt="BOSCH BFG 6000" class="catalog-item-img">
+            <h3 class="catalog-item-title">Перфоратор BOSCH BFG 6000</h3>
+            <span class="goods-old-price">30500 р.</span>
+            <a class="catalog-item-price primary-btn" href="#">25500 р.</a>
+            <div class="catalog-item-popup">
+              <a class="catalog-item-popup-buy" href="#">купить</a>
+              <a class="catalog-item-popup-bookmarks" href="#">в закладки</a>
+            </div>
+          </li>
+          <li class="catalog-item">
+            <img src="img/perforator_1_218x170.jpg" width="218" height="170" alt="BOSCH BFG 2000" class="catalog-item-img">
+            <h3 class="catalog-item-title">Перфоратор BOSCH BFG 2000</h3>
+            <span class="goods-old-price"></span>
+            <a class="catalog-item-price primary-btn" href="#">12500 р.</a>
+            <div class="catalog-item-popup">
+              <a class="catalog-item-popup-buy" href="#">купить</a>
+              <a class="catalog-item-popup-bookmarks" href="#">в закладки</a>
+            </div>
+          </li>
+        </ul>
+        <div class="catalog-paginator">
+          <a href="#1" class="catalog-paginator-page catalog-paginator-current-page">1</a>
+          <a href="#2" class="catalog-paginator-page">2</a>
+          <a href="#3" class="catalog-paginator-page">3</a>
+          <a href="#next" class="catalog-paginator-page catalog-paginator-next">следующая</a>
+        </div>
+      </div>
     </section>
   </main>
-  <footer>
-    <div class="footer-top">
-      <div class="container">
-        <a class="footer-logo" href="#" title="В начало страницы">техномарт</a>
+  <footer class="main-footer">
+    <div class="container">
+      <div class="footer-top">
+        <a class="footer-logo" href="#" title="В начало страницы"><img src="img/logo-technomart.svg" alt="техномарт"></a>
         <nav class="footer-nav">
           <ul class="footer-nav-list">
             <li class="footer-nav-item"><a href="#">Компания</a></li>
@@ -191,10 +204,8 @@
           </ul>
         </nav>
       </div>
-    </div>
-    <div class="footer-mid">
-      <div class="container">
-        <p class="footer-mid-adress">г. Санкт-Петербург, ул. Б. Конюшенная, д. 19/8</br><a class="footer-mid-tel" href="tel:+78125550555">+7 (812) 555-05-55</a></p>
+      <div class="footer-mid">
+        <p class="footer-mid-adress">г. Санкт-Петербург, ул. Б. Конюшенная, д. 19/8<br><a class="footer-mid-tel" href="tel:+78125550555">+7 (812) 555-05-55</a></p>
         <ul class="footer-proposal-list">
           <li class="footer-proposal-item"><a href="#">Материалы</a></li>
           <li class="footer-proposal-item"><a href="#">Техника</a></li>
@@ -202,7 +213,6 @@
           <li class="footer-proposal-item"><a href="#">Спецпредложения</a></li>
         </ul>
       </div>
-    </div>
     </div>
     <div class="footer-bot">
       <div class="container">
