--- a/catalog.html
+++ b/catalog.html
@@ -34,9 +34,15 @@
             </p>
           </div>
           <ul class="user-menu">
-            <li class="user-menu-item"><a class="user-menu-btn user-menu-profile" href="#">Равшан Джамшутович</a><a class="user-logout" href="#" title="Выход"></a></li>
-            <li class="user-menu-item user-menu-orders"><a href="#">Мои заказы</a></li>
-            <li class="user-menu-item user-menu-control-panel"><a href="#">Личный кабинет</a></li>
+            <li class="user-menu-item user-menu-logged">
+              <a class="user-menu-profile" href="#">Равшан Джамшутович</a>
+              <a class="user-logout" href="#" title="Выход"></a></li>
+            <li class="user-menu-item user-menu-orders">
+              <a href="#">Мои заказы</a>
+            </li>
+            <li class="user-menu-item user-menu-control-panel">
+              <a href="#">Личный кабинет</a>
+            </li>
           </ul>
         </div>
         <nav class="main-nav">
@@ -88,7 +94,14 @@
         </form>
       </div>
       <div class="catalog-goods">
-        <div class="catalog-sort">123123</div>
+        <div class="catalog-sort">сортировка
+          <div class="catalog-sort-wrap">
+            <a href="#" class="catalog-sort-btn">По цене</a>
+            <a href="#" class="catalog-sort-btn">По типу</a>
+            <a href="#" class="catalog-sort-btn">по функционалу</a></div>
+          <a href="#" class="catalog-sort-up visually-hidden" title="по возрастанию"></a>
+          <a href="#" class="catalog-sort-down visually-hidden" title="по убыванию"></a>
+        </div>
         <ul class="catalog-list">
           <li class="catalog-item">
             <img src="img/perforator_1_218x170.jpg" width="218" height="170" alt="BOSCH BFG 3000" class="catalog-item-img">
@@ -110,7 +123,7 @@
               <a class="catalog-item-popup-bookmarks" href="#">в закладки</a>
             </div>
           </li>
-          <li class="catalog-item">
+          <li class="catalog-item item-new">
             <img src="img/perforator_1_218x170.jpg" width="218" height="170" alt="BOSCH BFG 2000" class="catalog-item-img">
             <h3 class="catalog-item-title">Перфоратор BOSCH BFG 2000</h3>
             <span class="goods-old-price"></span>
@@ -130,7 +143,7 @@
               <a class="catalog-item-popup-bookmarks" href="#">в закладки</a>
             </div>
           </li>
-          <li class="catalog-item">
+          <li class="catalog-item item-new">
             <img src="img/perforator_1_218x170.jpg" width="218" height="170" alt="BOSCH BFG 6000" class="catalog-item-img">
             <h3 class="catalog-item-title">Перфоратор BOSCH BFG 6000</h3>
             <span class="goods-old-price">30500 р.</span>
@@ -150,7 +163,7 @@
               <a class="catalog-item-popup-bookmarks" href="#">в закладки</a>
             </div>
           </li>
-          <li class="catalog-item">
+          <li class="catalog-item item-new">
             <img src="img/perforator_1_218x170.jpg" width="218" height="170" alt="BOSCH BFG 3000" class="catalog-item-img">
             <h3 class="catalog-item-title">Перфоратор BOSCH BFG 3000</h3>
             <span class="goods-old-price">22500 р.</span>
@@ -228,10 +241,11 @@
     </div>
   </footer>
   <div class="popup popup-cart">
-    <strong>Товар добавлен в корзину!</strong>
-    <a href="#" class="btn popup-cart-order">оформить заказ</a>
-    <button class="popup-cart-continue">продолжить покупки</button>
-    <button class="popup-close-btn popup-close-btn-cart"><span>закрыть</span></button>
+    <div class="popup-cart-notification">
+      <strong class="popup-cart-notification-headline">Товар добавлен в корзину!</strong>
+      <a href="#" class="primary-btn popup-cart-order">оформить заказ</a>
+      <button class="popup-cart-continue popup-close-btn">продолжить покупки</button>
+    </div>
   </div>
   <script>
   document.write('<script src="http://' + (location.host || 'localhost').split(':')[0] + ':35729/livereload.js?snipver=1"></' + 'script>')
