--- a/index.html
+++ b/index.html
@@ -101,7 +101,7 @@
     <section class="popular-goods container">
       <h2 class="visually-hidden">Популярные товары</h2>
       <p class="popular-goods-intro">
-        <b class="popular-goods-title">популярные товары:</b>
+        <strong class="popular-goods-title">популярные товары:</strong>
         <a class="popular-goods-all primary-btn" href="#">все популярные товары</a>
       </p>
       <ul class="popular-goods-list">
