--- a/catalog.html
+++ b/catalog.html
@@ -25,7 +25,7 @@
     <div class="header-mid">
       <div class="container">
         <div class="header-mid-inner">
-          <p class="header-mid-title">Интернет-магазин строительных материалов<br>и инструментов для ремонта</p>
+          <p class="header-mid-title">Интернет-магазин строительных материалов и&nbsp;инструментов для ремонта</p>
           <div class="header-contacts">
             <a class="header-tel" href="tel:+78125550555" title="Позвонить нам">+7 (812) 555-05-55
             </a>
@@ -48,8 +48,8 @@
         <nav class="main-nav">
           <ul>
             <li class="main-nav-item"><a href="index.html">Главная</a></li>
-            <li class="main-nav-item"><a href="">Каталог</a></li>
             <li class="main-nav-item"><a href="#">Компания</a></li>
+            <li class="main-nav-item"><a href="">Каталог</a></li>
             <li class="main-nav-item"><a href="#">Новости</a></li>
             <li class="main-nav-item"><a href="#">Спецпредложения</a></li>
             <li class="main-nav-item"><a href="#">Доставка</a></li>
@@ -75,7 +75,7 @@
           <strong class="catalog-filter-title">фильтр:</strong>
           <fieldset class="catalog-filter-price">
             <legend class="catalog-filter-price-legend">цена:</legend>
-            <input class="catalog-filter-price-range" type="range" multiple min="0" max="3500" step="1" tabindex="0">
+            <input class="catalog-filter-price-range" type="range" min="0" max="3500" step="1" tabindex="0">
           </fieldset>
           <fieldset class="catalog-filter-brand">
             <legend class="catalog-filter-brand-legend">производители:</legend>
@@ -254,7 +254,8 @@
       <a href="#" class="primary-btn popup-cart-order">оформить заказ</a>
       <button class="popup-cart-continue popup-close-btn">продолжить покупки</button>
     </div>
-  </div>
+  </div>  
+  <script src="js/script.js"></script>
   <script>
   document.write('<script src="http://' + (location.host || 'localhost').split(':')[0] + ':35729/livereload.js?snipver=1"></' + 'script>')
 
