--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
     <div class="header-mid">
       <div class="container">
         <div class="header-mid-inner">
-          <h1 class="header-mid-title">Интернет-магазин строительных материалов<br>и инструментов для ремонта</h1>
+          <h1 class="header-mid-title">Интернет-магазин строительных материалов и&nbsp;инструментов для ремонта</h1>
           <div class="header-contacts">
             <a class="header-tel" href="tel:+78125550555" title="Позвонить нам">+7 (812) 555-05-55</a>
             <p class="header-adress">
@@ -33,9 +33,12 @@
             </p>
           </div>
           <ul class="user-menu">
-            <li class="user-menu-btn
- login-enter"><a href="#">Войти</a></li>
-            <li class="user-menu-btn login-reg"><a href="#">Регистрация</a></li>
+            <li class="user-menu-btn login-enter">
+              <a href="#">Войти</a>
+            </li>
+            <li class="user-menu-btn login-reg">
+              <a href="#">Регистрация</a>
+            </li>
           </ul>
         </div>
         <nav class="main-nav">
@@ -163,7 +166,7 @@
         <li class="popular-brands-item">
           <a href="#"><img src="img/dewalt_146x44.jpg" width="144" height="44" alt="DeWalt"></a>
         </li>
-        <li class="popular-brands-item">
+        <li class="popular-brands-item brands-item-interscol">
           <a href="#"><img src="img/interscol_200x88.jpg" width="200" height="88" alt="ИНТЕРСКОЛ"></a>
         </li>
         <li class="popular-brands-item">
@@ -175,7 +178,7 @@
         <li class="popular-brands-item">
           <a href="#"><img src="img/aeg_151x96.jpg" width="151" height="96" alt="AEG"></a>
         </li>
-        <li class="popular-brands-item">
+        <li class="popular-brands-item brands-item-metabo">
           <a href="#"><img src="img/metabo_204x69.jpg" width="204" height="69" alt="Metabo"></a>
         </li>
       </ul>
@@ -277,11 +280,11 @@
     </div>
   </footer>
   <div class="popup-modal popup-modal-map">
-    <div class="popup-map-wrap">
-      <a href="www.maps.google.com">
-        <img src="img/popup-map.jpg" width="940" height="446" alt="Наш адрес: Санкт-петербург, улица большая конюшенная, дом 19">
-      </a>
-      <button class="popup-close-btn">закрыть</button>
+    <div class="popup-map-wrap"><!-- 
+      <a href="www.maps.google.com"> --><iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d1998.5991043651586!2d30.320894616097!3d59.938794181876254!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x4696310fca5ba729%3A0xea9c53d4493c879f!2z0JHQvtC70YzRiNCw0Y8g0JrQvtC90Y7RiNC10L3QvdCw0Y8g0YPQuy4sIDE5LCDQodCw0L3QutGCLdCf0LXRgtC10YDQsdGD0YDQsywgMTkxMTg2!5e0!3m2!1sru!2sru!4v1551811588109" width="940" height="446"></iframe><!-- 
+        <img src="img/popup-map.jpg" width="940" height="446" alt="Наш адрес: Санкт-петербург, улица большая конюшенная, дом 19"> -->
+      <!-- </a> -->
+      <button class="popup-close-btn close-btn-map">закрыть</button>
     </div>
   </div>
   <div class="popup-modal popup-write-us">
@@ -309,10 +312,10 @@
       <a href="#" class="primary-btn popup-cart-order">оформить заказ</a>
       <button class="popup-cart-continue popup-close-btn">продолжить покупки</button>
     </div>
+  </div>  
+  <script src="js/script.js"></script>
     <script>
     document.write('<script src="http://' + (location.host || 'localhost').split(':')[0] + ':35729/livereload.js?snipver=1"></' + 'script>')
-
     </script>
 </body>
-
 </html>
