--- a/index.html
+++ b/index.html
@@ -280,8 +280,10 @@
     </div>
   </footer>
   <div class="popup-modal popup-modal-map">
-    <div class="popup-map-wrap"><!-- 
-      <a href="www.maps.google.com"> --><iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d1998.5991043651586!2d30.320894616097!3d59.938794181876254!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x4696310fca5ba729%3A0xea9c53d4493c879f!2z0JHQvtC70YzRiNCw0Y8g0JrQvtC90Y7RiNC10L3QvdCw0Y8g0YPQuy4sIDE5LCDQodCw0L3QutGCLdCf0LXRgtC10YDQsdGD0YDQsywgMTkxMTg2!5e0!3m2!1sru!2sru!4v1551811588109" width="940" height="446"></iframe><!-- 
+    <div class="popup-map-wrap">
+      <!-- 
+      <a href="www.maps.google.com"> --><iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d1998.5991043651586!2d30.320894616097!3d59.938794181876254!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x4696310fca5ba729%3A0xea9c53d4493c879f!2z0JHQvtC70YzRiNCw0Y8g0JrQvtC90Y7RiNC10L3QvdCw0Y8g0YPQuy4sIDE5LCDQodCw0L3QutGCLdCf0LXRgtC10YDQsdGD0YDQsywgMTkxMTg2!5e0!3m2!1sru!2sru!4v1551811588109" width="940" height="446"></iframe>
+      <!-- 
         <img src="img/popup-map.jpg" width="940" height="446" alt="Наш адрес: Санкт-петербург, улица большая конюшенная, дом 19"> -->
       <!-- </a> -->
       <button class="popup-close-btn close-btn-map">закрыть</button>
@@ -312,10 +314,12 @@
       <a href="#" class="primary-btn popup-cart-order">оформить заказ</a>
       <button class="popup-cart-continue popup-close-btn">продолжить покупки</button>
     </div>
-  </div>  
+  </div>
   <script src="js/script.js"></script>
-    <script>
-    document.write('<script src="http://' + (location.host || 'localhost').split(':')[0] + ':35729/livereload.js?snipver=1"></' + 'script>')
-    </script>
+  <script>
+  document.write('<script src="http://' + (location.host || 'localhost').split(':')[0] + ':35729/livereload.js?snipver=1"></' + 'script>')
+
+  </script>
 </body>
+
 </html>
